welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:8: error: not found: value i
	nums(i)
             ^